# IW2_main

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
libs/array_search/include/: array_search.h
libs/array_search/src/: array_search.c
libs/array_search_forked/include/: array_search_forked.h
libs/array_search_forked/src/: array_search_forked.c
test_data/: test.txt
tests/: main.cpp  stress_test_forked.cpp  stress_test_normal.cpp  test_normal.cpp  tests.cpp  tests_forked.cpp
